--- a/HW1.html
+++ b/HW1.html
@@ -7,8 +7,9 @@
 	<h2><center>My Major Is: Engineering Psychology</center></h2>
 	<h2><center>My IP Address Is: 185.27.134.206</center></h2>
 
-	<p style="font-size: 12pt;"><center>I am from San Francisco, California</center></p>
-	<p style="font-size: 12pt;"><center>Something no one would expect about me: I like country music</center></p> 
+	<center><p style="font-size: 14pt;">I am from San Francisco, California</p></center>
+	<center><p style="font-size: 14pt;">Something no one would expect about me: I like country music</p></center>
+	<center><p style="font-size: 14pt;">My favorite place is Santorini, Greece</p></center>
 
 	<img src="https://img.locationscout.net/images/2018-03/sunset-on-oia-santorini-greece_l.jpeg" />
 
