--- a/HW2.html
+++ b/HW2.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html> 
 <head>
 	<title>hw2</title>
 </head> 
 <body> 
-	<h1>Business Title</h1>
+	<h1 style="font-family:Courier; color: #4b5320; font-size: 100px;">Business Title</h1>
 
 
 
