--- a/HW2.html
+++ b/HW2.html
@@ -4,7 +4,7 @@
 	<title>hw2</title>
 </head> 
 <body> 
-	<h1 style="font-family:Courier; color: #4b5320; font-size: 100px;">Business Title</h1>
+	<h1 style="font-family:Courier; color: #FAC898; font-size: 100px;">Business Title</h1>
 
 
 
