--- a/HW2.html
+++ b/HW2.html
@@ -3,8 +3,8 @@
 <head>
 	<title>hw2</title>
 </head> 
-<body> 
-	<h1 style="font-family:Verdana; color: #FAC898; font-size: 50px;">Business <br>Title</h1>
+<body {style= "background-color: #FDFD96";}> 
+	<h1 style="font-family:Verdana; color: #FAC898; font-size: 50px;" >Business <br>Title</h1>
 
 
 
