--- a/HW2.html
+++ b/HW2.html
@@ -3,7 +3,10 @@
 <head>
 	<title>hw2</title>
 </head> 
-<body {style= "background-color: #FDFD96";}> 
+
+body {background-color: #FDFD96;}
+
+<body> 
 	<h1 style="font-family:Verdana; color: #FAC898; font-size: 50px;" >Business <br>Title</h1>
 
 
