--- a/HW2.html
+++ b/HW2.html
@@ -4,9 +4,14 @@
 	<title>hw2</title>
 </head> 
 
-body {background-color: #FDFD96;}
+<style>
+
+	body {background-color: #FDFD96;}
+
+</style>
 
 <body> 
+
 	<h1 style="font-family:Verdana; color: #FAC898; font-size: 50px;" >Business <br>Title</h1>
 
 
