--- a/HW2.html
+++ b/HW2.html
@@ -6,13 +6,14 @@
 
 <style>
 
-	body {background-color: #FDFD96;}
+	body {background-color: #B1CBA6;}
+	h1 {background-color: #CCCCFF;}
 
 </style>
 
 <body> 
 
-	<h1 style="font-family:Verdana; color: #FAC898; font-size: 50px;" >Business <br>Title</h1>
+	<h1 style="font-family:Verdana; color: #000000; font-size: 50px;" >Business <br>Title</h1>
 
 
 
