--- a/HW2.html
+++ b/HW2.html
@@ -6,8 +6,13 @@
 
 <style>
 
-	body {background-color: #B1CBA6;}
-	h1 {background-color: #CCCCFF;}
+	body {
+		background-color: #B1CBA6;
+		opacity: 0.3;
+	}
+	h1 {background-color: #CCCCFF;
+		margin-left: 100px;
+	}
 
 </style>
 
