--- a/HW2.html
+++ b/HW2.html
@@ -7,11 +7,13 @@
 <style>
 
 	body {
+		
 		background-color: #B1CBA6;
-		opacity: 0.3;
 	}
-	h1 {background-color: #CCCCFF;
+	h1 {
+		
 		margin-left: 100px;
+		padding: 25px;
 	}
 
 </style>
