--- a/HW2.html
+++ b/HW2.html
@@ -20,8 +20,13 @@
 
 <body> 
 
-	<h1 style="font-family:Verdana; color: #000000; font-size: 50px;" >Business <br>Title</h1>
+	<h1 style="font-family:Verdana; color: #000000; font-size: 50px;" >Save the <br>Trees</h1>
 
+	<div style="background-color:#9ACD32 ;color:#000000;padding:20px;">
+		<h2>About Us</h2>
+		<h2>Services</h2>
+		<h2>Contact</h2>
+	</div>
 
 
 </body> 
