--- a/HW2.html
+++ b/HW2.html
@@ -22,11 +22,13 @@
 
 	<h1 style="font-family:Verdana; color: #000000; font-size: 50px;" >Save the <br>Trees</h1>
 
-	<div style="background-color:#9ACD32 ;color:#000000;padding:20px;">
+	<article>
+	<div style="background-color:#9ACD32 ; font-family: Verdana; color:#000000;padding:25px;">
 		<h2>About Us</h2>
 		<h2>Services</h2>
 		<h2>Contact</h2>
 	</div>
+	</article>
 
 
 </body> 
