--- a/HW2.html
+++ b/HW2.html
@@ -4,19 +4,7 @@
 	<title>hw2</title>
 </head> 
 
-<style>
-
-	body {
-		
-		background-color: #B1CBA6;
-	}
-	h1 {
-		
-		margin-left: 100px;
-		padding: 25px;
-	}
-
-</style>
+<link href="Stylesheet.css" rel="stylesheet">
 
 <body> 
 
@@ -24,9 +12,9 @@
 
 	<article>
 	<div style="background-color:#9ACD32 ; font-family: Verdana; color:#000000;padding:25px;">
-		<h2>About Us</h2>
-		<h2>Services</h2>
+		<h2>Home</h2>
 		<h2>Contact</h2>
+		<h2>Services</h2>
 	</div>
 	</article>
 
