--- a/HW2.html
+++ b/HW2.html
@@ -11,12 +11,14 @@
 	<h1 style="font-family:Verdana; color: #000000; font-size: 50px;" >Save the <br>Trees</h1>
 
 	<article>
-	<div style="background-color:#9ACD32 ; font-family: Verdana; color:#000000;padding:25px;">
+	<div style="background-color:#9ACD32 ; color:#000000;padding:20px;">
 		<h2>Home</h2>
 		<h2>Contact</h2>
 		<h2>Services</h2>
 	</div>
 	</article>
+
+	<img src="https://www.steamandmoorland.com/files/images/news/help-saving-trees-1504272691-1504272732_n.jpg"/>
 
 
 </body> 
