--- a/HW2.html
+++ b/HW2.html
@@ -8,7 +8,7 @@
 
 <body> 
 
-	<h1 style="font-family:Verdana; color: #000000; font-size: 50px;" >Save the <br>Trees</h1>
+	<h1>Save the <br>Trees</h1>
 
 	<article>
 	<div style="background-color:#9ACD32 ; color:#000000;padding:20px;">
