--- a/HW2.html
+++ b/HW2.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html> 
 <head>
-	<title>hw2</title>
 	<link href="Stylesheet.css" rel="stylesheet">
+	<title>hw2</title>
+
+	<style>
+		header {
+			padding: 40px;
+			text-align: center;
+			font-family: Verdana;
+			color: #000000;
+			background-color: #9DC183;
+			border-color: #597D35;
+
+		}
+		nav{
+
+			font-family: Verdana;
+			border-style: solid;
+			border-color: #597D35;
+
+		}
+
+	</style>
+
 </head> 
 
 
 <body> 
+	<header>
+		<h1>More Trees, Please!</h1>
+	</header>
 
-	<h1>Save the <br>Trees</h1>
-
-	<article>
-	<div style="background-color:#9ACD32 ; color:#000000;padding:20px;">
-		<h2>Home</h2>
-		<h2>Contact</h2>
-		<h2>Services</h2>
-	</div>
-	</article>
-
-	<img src="https://www.steamandmoorland.com/files/images/news/help-saving-trees-1504272691-1504272732_n.jpg"/>
-
+	<nav>
+		<div class="topnav">
+			<a class="active" href="HW2.html">HOME</a>
+        	<a href="services.html">SERVICES</a>
+        	<a href="contact_us.html">CONTACT</a>
+     	 </div>
+    </nav>
 
 </body> 
 
