--- a/HW2.html
+++ b/HW2.html
@@ -4,32 +4,30 @@
 	<link href="Stylesheet.css" rel="stylesheet">
 	<title>hw2</title>
 
-	<style>
-		header {
-			padding: 40px;
-			text-align: center;
-			font-family: Verdana;
-			color: #000000;
-			background-color: #9DC183;
-			border-color: #597D35;
+<style>
+	
+	.content {
 
-		}
-		nav{
+		text-align: center;
+  		font-size: 20px;
+  		font-family: Verdana;
+  		background-color: #9DC183;
+  		padding: 20px;
+  		margin-right: 300px;
+  		margin-left: 300px;
+  		margin-top: 50px;
 
-			font-family: Verdana;
-			border-style: solid;
-			border-color: #597D35;
+	}
 
-		}
-
-	</style>
-
+</style>
 </head> 
 
 
 <body> 
 	<header>
-		<h1>More Trees, Please!</h1>
+		<div class="title">
+			<h1>More Trees, Please!</h1>
+		</div>
 	</header>
 
 	<nav>
@@ -39,6 +37,17 @@
         	<a href="contact_us.html">CONTACT</a>
      	 </div>
     </nav>
+
+<div class="content">
+    <h2 style="font-family:Verdana; font-color:#000000">Who Are We?</h2>
+    <p style="font-size:18px">We are a non-profit environmental organization based in Medford, Massachusetts.</p>
+</div>
+
+<div class="content">
+    <h2 style="font-family:Verdana; font-color:#000000">Purpose</h2>
+    <p style="font-size:18px">  Our goal is to implement greener spaces on college campuses and spread awareness about the importance of tree conservation. Especially in the environmental conditions our world is currently in, tree-planting and preservation is increasingly important! </p>
+</div>
+
 
 </body> 
 
