--- a/contact_us.html
+++ b/contact_us.html
@@ -15,9 +15,9 @@
 
 	<nav>
 		<div class="topnav">
-			<a class="active" href="HW2.html">HOME</a>
+			<a href="HW2.html">HOME</a>
         	<a href="services.html">SERVICES</a>
-        	<a href="contact_us.html">CONTACT</a>
+        	<a class="active" href="contact_us.html">CONTACT</a>
      	 </div>
     </nav>
 
