--- a/contact_us.html
+++ b/contact_us.html
@@ -4,6 +4,21 @@
 	<link href="Stylesheet.css" rel="stylesheet">
 	<title>hw2</title>
 
+	<style>
+		.content {
+
+			text-align: center;
+  			font-size: 25px;
+  			font-family: Verdana;
+  			background-color: #9DC183;
+  			padding: 10px;
+  			margin-right: 90px;
+  			margin-left: 90px;
+  			margin-top: 50px;
+
+		}
+	</style>
+
 </head>
 
 <body> 
@@ -21,9 +36,17 @@
      	 </div>
     </nav>
 
+	<div class="content">
+    	<h2 style="font-family:Verdana; font-color:#000000">Contact Us:</h2>
+    	<ul style="list-style-type:none;">
+  			<li>Phone: (123)-456-789 </li>
+  			<li>Email: moretreespls@gmail.com</li>
+ 			<li>Address: 419 Boston Ave, Medford, MA 02155</li>
+		</ul>
 
+	</div>
 
-<body> 
+</body> 
 
 
 
