--- a/services.html
+++ b/services.html
@@ -3,6 +3,32 @@
 <head>
 	<link href="Stylesheet.css" rel="stylesheet">
 	<title>hw2</title>
+
+	<style>
+		.content {
+
+			text-align: center;
+  			font-size: 25px;
+  			font-family: Verdana;
+  			background-color: #9DC183;
+  			padding: 20px;
+
+  			margin-right: 50px;
+  			margin-left: 50px;
+  			margin-top: 50px;
+
+		}
+		.row {
+        	display: flex;
+ 
+      	}
+      	.column {
+        	flex: 33.33%;
+       		padding: 15px;
+
+      	}
+    </style>
+
 </head>
 
 
@@ -20,3 +46,23 @@
         	<a href="contact_us.html">CONTACT</a>
      	 </div>
     </nav>
+
+    <div class="content">
+    	<div class="row">
+    		<div class="column">
+    			<h2>Implementation</h2>
+        		<p style="font-size:20px;">We offer design, planning, and planting services of trees on college campuses. We will work with our clients to determine what tree-life would be the most fitting specific to the college campus.</p>
+       		</div>
+       		<div class="column">
+          		<h2>Education</h2>
+          		<p style="font-size:20px;">We offer guest lecture services and educational material about the importance of tree conservation. This would include an explanation of what tree conservation is, what tree conservation looks like on a college campus, and how to support the movement.</p>
+        	</div>
+    	</div>
+	</div>
+
+
+    	
+
+
+</body>
+</html>
