--- a/contact_us.html
+++ b/contact_us.html
@@ -4,18 +4,6 @@
 	<link href="Stylesheet.css" rel="stylesheet">
 	<title>hw2</title>
 
-	<style>
-		.image {
-			position: absolute;
-			right:400px; 
-			bottom:300px; 
-			left: 400px;
-			top: 400px;
-			width:300px; 
-			height:300px; 
-		}
-
-	</style>
 </head>
 
 <body> 
@@ -42,10 +30,8 @@
 		</ul>
 
 	</div>
+	<img style="display: block; margin-left: auto; margin-right: auto; margin-top: 80px; height: 450px; width: 450px;" src="https://media.istockphoto.com/vectors/people-growing-plants-flat-contour-vector-illustration-gardeners-vector-id1188240068?k=20&m=1188240068&s=612x612&w=0&h=1Dd3hKTFqRs0HaN9-MuPcOZMvdlaMn8izNhePKnEF5s="/>
 
-	<div class="image">
-		<img style="margin-top: 200px;" src="https://media.istockphoto.com/vectors/people-growing-plants-flat-contour-vector-illustration-gardeners-vector-id1188240068?k=20&m=1188240068&s=612x612&w=0&h=1Dd3hKTFqRs0HaN9-MuPcOZMvdlaMn8izNhePKnEF5s="/>
-	</div>
 </body> 
 
 
