--- a/services.html
+++ b/services.html
@@ -5,14 +5,14 @@
 	<title>hw2</title>
 
 	<style>
-		.row {
-        	display: flex;
 
-      	}
       	.column {
+      		display: block;
         	flex: 50%;
-       		padding: 15px;
+        	padding: 20px;
+        	background-color: #9DC183;
       	}
+	
     </style>
 
 </head>
@@ -33,17 +33,16 @@
      	 </div>
     </nav>
 
-    <div class="content">
-    	<div class="row">
+    <div class="content_services">
     		<div class="column">
     			<h2>Implementation</h2>
         		<p style="font-size:20px;">We offer design, planning, and planting services of trees on college campuses. We will work with our clients to determine what tree-life would be the most fitting specific to the college campus.</p>
        		</div>
+       		<br>
        		<div class="column">
           		<h2>Education</h2>
           		<p style="font-size:20px;">We offer guest lecture services and educational material about the importance of tree conservation. This would include an explanation of what tree conservation is, what tree conservation looks like on a college campus, and how to support the movement.</p>
         	</div>
-    	</div>
 	</div>
 
 
