--- a/contact_us.html
+++ b/contact_us.html
@@ -24,8 +24,8 @@
 	<div class="content">
     	<h2 style="font-family:Verdana; font-color:#000000">Contact Us:</h2>
     	<ul style="list-style-type:none;">
-  			<li>Phone: (123)-456-789 </li>
-  			<li>Email: moretreespls@gmail.com</li>
+  			<li>Phone: <a href="tel:123456789">(123)-456-789</a></li>
+  			<li>Email: <a href = "mailto: moretreespls@gmail.com">moretreespls@gmail.com</a></li>
  			<li>Address: 419 Boston Ave, Medford, MA 02155</li>
 		</ul>
 
