--- a/HW4.html
+++ b/HW4.html
@@ -30,7 +30,7 @@
   <br>
   <br>
 </div>
-  <p style="font-size: 35px; margin-bottom: -10px; font-family: Oswald; padding-left: 20px;"><u>Your order:</u></p>
+  <h2><u>Your order:</u></h2>
 
 <div class = "order">
   <p id="hotdogs"></p>
