--- a/HW4.html
+++ b/HW4.html
@@ -14,32 +14,34 @@
 
   <h1>Welcome to Joe's Hotdog Stand!</h1>
 
-  <h2><u>Prices:</u></h2> 
 <div class = "column">
-<div class = "prices" >
 
-  <p>Hotdogs: $3.25 each</p>
-  <p>Fries: $2.00 each</p>
-  <p>Drinks: $1.50 each</p>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-</div>
+
+  <div class = "content" >
+
+  <h2><u>Prices:</u></h2> 
+
+    <p>Hotdogs: $3.25 each</p>
+    <p>Fries: $2.00 each</p>
+    <p>Drinks: $1.50 each</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  
   <h2><u>Your order:</u></h2>
 
-<div class = "order">
   <p id="hotdogs"></p>
   <p id="fries"></p>
   <p id="drinks"></p>
   <p id="subtotal"></p>
   <p id="qualified"></p>
   <p id="tax"></p>
-  <p style="font-size: 27px;" id="total"></p>
+  <p id="total"></p>
 
 
 
@@ -72,7 +74,7 @@
 
 
   </script>
-</div>
+  </div>
 </div>
 
 </body>
