--- a/HW5.html
+++ b/HW5.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 	<title>Lottery</title>
+	<style>
+
+	body {
+    	text-align: center;
+    	font-size: 20px;
+    	font-family: "Roboto Mono";
+	}
+
+
+	</style>
+
 </head>
 
 <body>
+	<br>
 	<p id="5Guess"></p>
     <p id="luckyGuess"></p>
     <br>
