--- a/HW5.html
+++ b/HW5.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="HW5stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 	<title>Lottery</title>
-	<style>
-
-	body {
-    	text-align: center;
-    	font-size: 20px;
-    	font-family: "Roboto Mono";
-	}
-
-
-	</style>
-
 </head>
 
+
 <body>
+	<br>
+	<h1> Welcome to Lottery Simulator! </h1>
 	<br>
 	<p id="5Guess"></p>
     <p id="luckyGuess"></p>
