--- a/jade_delight.html
+++ b/jade_delight.html
@@ -1,6 +1,8 @@
     <!DOCTYPE html">
     <html>
     <head>
+    <link href="jade_delightstylesheet.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
