--- a/HW9.html
+++ b/HW9.html
@@ -2,10 +2,13 @@
 
 <html>
   <head>
-    <title>Setlist 2</title>
+
+    <title>Senna's JSON Setlist</title>
+    <link rel='stylesheet' type="text/css" href="HW9stylesheet.css" />
+
     <script>
 
-        function displaySongs(){
+        function FilterSongs(){
             request = new XMLHttpRequest();
 			request.open("GET", "https://sennalee.github.io/senna-lee/sennas_setlist.json", true);
 			request.onreadystatechange = function() {
@@ -31,7 +34,7 @@
 
                 }
 				else if (request.readyState == 4 && request.status != 200) {
-				    document.getElementById("data").innerHTML = "Something is wrong!  Check the logs to see where this went off the rails";
+				    document.getElementById("data").innerHTML = "Error";
 				}
 
 				else if (request.readyState == 3) {
@@ -43,7 +46,7 @@
 			console.log("4 - Request sent");
         }
 
-		function loadFile(set) {
+		function LoadFile(set) {
 			request = new XMLHttpRequest();
 			console.log("1 - request object created");
  
@@ -57,18 +60,18 @@
 				if (request.readyState == 4 && request.status == 200) {
 
                     //only serialized result
-					// result = request.responseText;
-                    // document.getElementById("data").innerHTML = result;
+					result = request.responseText;
+                    document.getElementById("data").innerHTML = result;
 
-                    // table format
-                    // var setlist = JSON.parse(request.responseText);
-                    // txt = "";
-                    // txt += "<table border='1'>"
-                    // for (var x in setlist) {
-                    //     txt += "<tr>" + "<td>" + setlist[x].Artist + "</td>" + "<td>" + setlist[x].Title + "</td>" + "<td>" + setlist[x].Genre + "</td>" + "<td>" + setlist[x].Year + "</td>" + "</tr>";
-                    // }
-                    // txt += "</table>"    
-                    // document.getElementById("data").innerHTML = txt;
+                    //table format
+                    var setlist = JSON.parse(request.responseText);
+                    txt = "";
+                    txt += "<table>"
+                    for (var x in setlist) {
+                         txt += "<tr>" + "<td>" + setlist[x].Artist + "</td>" + "<td>" + setlist[x].Title + "</td>" + "<td>" + setlist[x].Genre + "</td>" + "<td>" + setlist[x].Year + "</td>" + "</tr>";
+                     }
+                    txt += "</table>"    
+                    document.getElementById("data").innerHTML = txt;
 
                     //genre dropdown
                     var setlist = JSON.parse(request.responseText);
@@ -100,19 +103,33 @@
 			request.send();
 			console.log("4 - Request sent");
 		}
-	
-        
+
+        $.get("https://sennalee.github.io/senna-lee/sennas_setlist.json",
+
+        function(data){
+        document.getElementById("string").innerHTML = data;
+        });
+
+
     </script>
     </head>
-    <body onload = "loadFile()">
-    <div>
-        <text id="data">
+<body onload = "LoadFile()">
+    <div id = "bar">
+        Senna's Setlist 
+    </div> 
+    <br><br>
+    <div id = "string">
+        {"Setlist" :[{"Title": "Traveller", "Artist": "Chris Stapleton", "Genre": ["Country"],"Year" : "2015"},{ "Title": "Blister in the Sun", "Artist": "Violent Femmes", "Genre": ["Alternative", "Indie"],"Year" : "1983"},{"Title": "Transportin'", "Artist": "Kodak Black", "Genre": ["Rap", "Hip Hop"],"Year" : "2017"},{ "Title": "Primadonna Girl", "Artist": "Marina", "Genre": ["Pop"],"Year" : "2012"},{ "Title": "Hell n Back", "Artist": "Bakar", "Genre": ["Alternative", "Indie"],"Year" : "2019"},{ "Title": "Travelin' Soldier", "Artist": "The Chicks","Genre": ["Country"],"Year" : "2002"},{ "Title": "Redbone", "Artist": "Childish Gambino", "Genre": ["Hip Hop"],"Year" : "2016"},{ "Title": "Midnight Train to Georgia", "Artist": "Indigo Girls", "Genre": ["Soft Rock"],"Year" : "1995"},{ "Title": "XS", "Artist": "Rina Sawayama", "Genre": ["Rock","Alternative"],"Year" : "2020"},{ "Title": "Good News", "Artist": "Mac Miller", "Genre": ["Hip Hop", "Rap"],"Year" : "2011"}]}
+        <br>
+    </div>
 
-        </text>
+    <div>
         <form>
             <select id="genres"></select><br>
-            <input type="button" value="filter" onclick="displaySongs()">
+            <input type="button" value="filter" onclick="FilterSongs()">
         </form>
+        <br>
+        <text id="data"></text>
     </div>
-  </body>
+</body>
 </html>
