--- a/HW9.html
+++ b/HW9.html
@@ -105,9 +105,9 @@
     </script>
     </head>
 <body onload = "LoadFile()">
-    <div id = "bar">
-        Senna's Setlist 
-    </div> 
+
+    <div style="font-size: 50px; font-family: 'Cooper Black'; color:#004EFF;"> Senna's Setlist </div>
+    
     <br>
     <div id = "string">
     [{"Title": "Traveller", "Artist": "Chris Stapleton", "Genre": ["Country"],"Year" : "2015"},{ "Title": "Blister in the Sun", "Artist": "Violent Femmes", "Genre": ["Alternative", "Indie"],"Year" : "1983"},{"Title": "Transportin'", "Artist": "Kodak Black", "Genre": ["Rap", "Hip Hop"],"Year" : "2017"},{ "Title": "Primadonna Girl", "Artist": "Marina", "Genre": ["Pop"],"Year" : "2012"},{ "Title": "Hell n Back", "Artist": "Bakar", "Genre": ["Alternative", "Indie"],"Year" : "2019"},{ "Title": "Travelin' Soldier", "Artist": "The Chicks","Genre": ["Country"],"Year" : "2002"},{ "Title": "Redbone", "Artist": "Childish Gambino", "Genre": ["Hip Hop"],"Year" : "2016"},{ "Title": "Midnight Train to Georgia", "Artist": "Indigo Girls", "Genre": ["Soft Rock"],"Year" : "1995"},{ "Title": "XS", "Artist": "Rina Sawayama", "Genre": ["Rock","Alternative"],"Year" : "2020"},{ "Title": "Good News", "Artist": "Mac Miller", "Genre": ["Hip Hop", "Rap"],"Year" : "2011"}]
