--- a/HW9.html
+++ b/HW9.html
@@ -22,7 +22,7 @@
                     }
                 }
                 txt = "";
-                txt += "<table border='1'>"
+                txt += "<table>"
                 for (var x in titles) {
                     txt += "<tr><td>" + titles[x] + "</td></tr>";
                 }
