--- a/HW9.html
+++ b/HW9.html
@@ -64,7 +64,7 @@
                     txt = "";
                     txt += "<table>";
                     for (var x in setlist) {
-                         txt += "<tr>" + "<td>" + setlist[x].Artist + "</td>" + "<td>" + setlist[x].Title + "</td>" + "<td>" + setlist[x].Genre + "</td>" + "<td>" + setlist[x].Year + "</td>" + "</tr>";
+                         txt += "<tr>" + "<td>" + setlist[x].Title + "</td>" + "<td>" + setlist[x].Artist + "</td>" + "<td>" + setlist[x].Genre + "</td>" + "<td>" + setlist[x].Year + "</td>" + "</tr>";
                      }
                     txt += "</table>";
 
