--- a/HW10.html
+++ b/HW10.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dog Facts</title>
-	<meta charset="utf-8">
-	<script>
+<title>Dog Facts</title>
+<meta charset="utf-8">
+<script>
 		function getDogFact() {
 			/* Step 1: Make instance of request object...
 			...to make HTTP request after page is loaded*/
@@ -12,7 +12,8 @@
 
 			// Step 2: Set the URL for the AJAX request to be the JSON file
 
-		request.open("GET", "https://dog-facts-api.herokuapp.com/api/v1/resources/dogs?number=1", true)
+	
+		request.open("GET", "https://cat-fact.herokuapp.com", true);
 
 			console.log("2 - opened request file");
 
@@ -66,14 +67,13 @@
 	 <div class="title">
 Describe the API you selected and what it does:
 </div>
-This API gives either random cat breeds or random cat facts. The user is able to
-call the API and parse the information they want.
+This API gives random Dog Facts! 
 <br><br>
 
  <div class="title">
 Cite the website where you found it:
 </div>
-https://catfact.ninja/
+https://cat-fact.herokuapp.com
 <br><br>
 
  <div class="title">
@@ -87,11 +87,9 @@ This let me isolate just one fact and be able to print it out in a clean way.
  <div class="title">
 Give two applications where this API would be helpful:
 </div>
-This would primarily be helpful for my mother who loves cats.
- She would be able to reload the page and constantly learn new
-information about cats. This could also be useful at a vet as something
-for people to look at in the waiting room.
-
+This API would be helpful to people who love dogs and want to learn random dog facts. It is a fun and simple 
+way to learn more about dogs. This API might also be helpful for kids to use, as it is an easy interface to 
+use and relieves boredom. 
 </div>
 
 
