--- a/HW10.html
+++ b/HW10.html
@@ -13,7 +13,7 @@
 			// Step 2: Set the URL for the AJAX request to be the JSON file
 
 	
-		request.open("GET", "https://cat-fact.herokuapp.com", true);
+		request.open("GET", "https://cat-fact.herokuapp.com/facts", true);
 
 			console.log("2 - opened request file");
 
