--- a/HW10.html
+++ b/HW10.html
@@ -56,7 +56,7 @@
 <body onload="getDogFact()">
 
 	<h1> Dog Facts! </h1>
-	<div class="text">
+	<div class="fact">
 		Random Dog Fact:
 	<div id="data"></div>
 </div>
