--- a/HW10.html
+++ b/HW10.html
@@ -67,20 +67,22 @@
 	 <div class="title">
 Describe the API you selected and what it does:
 </div>
-This API gives random Dog Facts! 
+This API gives random Dog Facts! Everytime the page is reloaded, the website will generate a 
+new dog fact. 
 <br><br>
 
  <div class="title">
 Cite the website where you found it:
 </div>
 https://cat-fact.herokuapp.com
+https://dog-facts-api.herokuapp.com
 <br><br>
 
  <div class="title">
 Describe the options you used for the API request:
 </div>
-In order to get the information I needed, I accessed the [fact] part of the API.
-This let me isolate just one fact and be able to print it out in a clean way.
+In order to get a random fact, I changed the end of the url from "/all" to "?number=1". This retreived only one fact
+from the JSON dog-fact file, and allowed me to print it out to the user. 
 
 <br><br>
 
